[gd_scene load_steps=4 format=3 uid="uid://cqci6ggmavg16"]

[ext_resource type="Script" path="res://scripts/hud.gd" id="1_i2qmi"]
[ext_resource type="Theme" uid="uid://dduospivxw12q" path="res://themes/splash_screen_controls.tres" id="2_1fob1"]
[ext_resource type="Theme" uid="uid://byojyqxy7685k" path="res://themes/game_over_panel.tres" id="3_yj47y"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_i2qmi")

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="UI"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -135.0
offset_right = 191.0
offset_bottom = 125.0
grow_horizontal = 2

[node name="HBoxContainer" type="HBoxContainer" parent="UI/Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -82.5
offset_right = 82.5
offset_bottom = 104.0
grow_horizontal = 2

[node name="Headings" type="VBoxContainer" parent="UI/Panel/HBoxContainer"]
layout_mode = 2

[node name="VerticalVelocity" type="Label" parent="UI/Panel/HBoxContainer/Headings"]
layout_mode = 2
text = "Vertical Velocity:"

[node name="HorizontalVelocity" type="Label" parent="UI/Panel/HBoxContainer/Headings"]
layout_mode = 2
text = "Horizontal Velocity:"

[node name="FuelRemaining" type="Label" parent="UI/Panel/HBoxContainer/Headings"]
layout_mode = 2
text = "Fuel Remaining:"

[node name="Altitude" type="Label" parent="UI/Panel/HBoxContainer/Headings"]
layout_mode = 2
text = "Altitude:"

[node name="Values" type="VBoxContainer" parent="UI/Panel/HBoxContainer"]
layout_mode = 2

[node name="VerticalVelocity" type="Label" parent="UI/Panel/HBoxContainer/Values"]
layout_mode = 2
text = "0"

[node name="HorzontalVelocity" type="Label" parent="UI/Panel/HBoxContainer/Values"]
layout_mode = 2

[node name="FuelRemaning" type="Label" parent="UI/Panel/HBoxContainer/Values"]
layout_mode = 2

[node name="Altitude" type="Label" parent="UI/Panel/HBoxContainer/Values"]
layout_mode = 2

[node name="Buttons" type="VBoxContainer" parent="UI"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -111.0
offset_right = 150.0
offset_bottom = 111.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_1fob1")

[node name="PlayAgain" type="Button" parent="UI/Buttons"]
layout_mode = 2
text = "Play Again"

[node name="Quit" type="Button" parent="UI/Buttons"]
layout_mode = 2
text = "Quit"

[node name="GameOverPanel" type="Panel" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -689.5
offset_top = -191.5
offset_right = 689.5
offset_bottom = 191.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_yj47y")

[node name="GameOverText" type="Label" parent="GameOverPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -581.5
offset_top = -136.0
offset_right = 581.5
offset_bottom = 136.0
grow_horizontal = 2
grow_vertical = 2
text = "Game Over Text"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="UI/Buttons/PlayAgain" to="." method="_on_play_again_pressed"]
[connection signal="pressed" from="UI/Buttons/Quit" to="." method="_on_quit_pressed"]
